Fix the wrong css class name regarding extra spaces between comments in tracker edit popup
git-svn-id: http://svn.egroupware.org/egroupware/trunk@46772 923e3c2e-ae13-0410-ba18-ced7211e33de

--- a/tracker/templates/default/app.css
+++ b/tracker/templates/default/app.css
@@ -34,4 +34,4 @@ label.tracker_trIdEdit:before { content: "#"; }
 
 /* Restricted access replies */
 .reply_visible_1 { border: 1px dashed gray; }
-.reply_visible_* { white-space: normal; }
+span.reply_visible_0 { white-space: normal !important; }
